# ClawMultiDeploy

./: .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.template.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  backups.py  instances.py  system.py
backend/app/services/: __init__.py  backup_service.py  docker_service.py  instance_service.py
backend/scripts/: add-instance.ps1  backup-instances.ps1  remove-instance.ps1
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: backups.ts  instances.ts  request.ts  system.ts
frontend/src/components/: InstanceLogsDialog.vue
frontend/src/router/: index.ts
frontend/src/stores/: instances.ts
frontend/src/types/: index.ts
frontend/src/views/: Backups.vue  Dashboard.vue  InstanceDetail.vue  Instances.vue
